[package]
name = "stilgar"
description = "A lightweight, no-fuss, drop-in replacement for Rudderstack"
authors = [
    "Withings <platform_ops@withings.com>",
    "Julien Kritter <julien.kritter@withings.com",
]
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.21"
byte-unit = { version = "4.0", features = ["serde"] }
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cron = "0.12"
directories = "4"
flate2 = "1.0"
http = "0.2"
humantime = "2.1"
indoc = "1.0"
itertools = "0.10"
lazy_static = "1.4"
log = { version = "0.4", features = ["serde"] }
prost = "0.11"
regex = "1"
serde = { version = ">= 1.0.158", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = "2.2"
serde_yaml = "0.9"
simple_logger = "4.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.8"
twox-hash = "1.6"
warp = "0.3"

[build-dependencies]
tonic-build = "0.8"

[profile.docker]
inherits = 'dev'
