[package]
name = "stilgar"
description = "A lightweight, no-fuss, drop-in replacement for Rudderstack"
license = "AGPL-3.0-or-later"
authors = [
    "Withings <platform_ops@withings.com>",
    "Julien Kritter <julien.kritter@withings.com>",
]
readme = "README.md"
version = "0.2.0"
edition = "2021"
default-run = "stilgar"
homepage = "https://github.com/withings/stilgar"
repository = "https://github.com/withings/stilgar"
keywords = ["rudderstack", "data", "tokio", "asynchronous", "clickhouse"]
categories = ["asynchronous", "database"]

[[bin]]
name = "stilgar"
path = "src/main.rs"

[[bin]]
name = "stilgar-check-event"
path = "src/checker.rs"
required-features = ["checker"]

[features]
checker = []

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
byte-unit = { version = "5.1", features = ["serde"] }
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
flate2 = "1.0"
flexi_logger = { git = "https://github.com/emabee/flexi_logger.git", rev = "refs/pull/182/head", features = ["kv", "syslog_writer"] }
humantime = "2.1"
indoc = "2.0"
ipnetwork = { version = "0.21", features = ["serde"] }
itertools = "0.14"
lazy_static = "1.4"
log = { version = "0.4", features = ["serde", "kv_unstable_std"] }
openssl = { version = "0.10", features = ["vendored"] }
prost = "0.14"
regex = "1"
secular = { version = "1.0", features = ["bmp"] }
serde = { version = ">= 1.0.158", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = "3"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
twox-hash = "2.0"
warp = "0.4"

[build-dependencies]
tonic-build = "0.14"

[profile.docker]
inherits = "dev"

[profile.release]
strip = true
